--- a/Mobile Security/Android App Security Checklist.json
+++ b/Mobile Security/Android App Security Checklist.json
@@ -7,7 +7,7 @@
       "category": "Coming Soon",
       "description": "This checklist is under development",
       "items": [
-        { "id": "1.1", "item": "Coming Soon - This checklist is being developed and will contain comprehensive Android app security guidelines", "severity": "Info" }
+        { "id": "1.1", "item": "Coming Soon - This checklist is being developed and will contain comprehensive Android app security guidelines", "severity": "Optional" }
       ]
     }
   ]
